# viur-assistant

./: .readthedocs.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
bones/: image.py
docs/: Pipfile  bone-action.rst  conf.py  getting-started.rst  index.rst  requirements.txt
modules/: assistant.py
skeletons/: demo.py
src/viur/assistant/: __init__.py  config.py  version.py
src/viur/assistant/bones/: actions.py  image.py
src/viur/assistant/modules/: assistant.py  demo.py
src/viur/assistant/skeletons/: __init__.py  assistant.py
tests/: test_generate_script.py  test_translate.py  utils.py
